--- a/video.html
+++ b/video.html
@@ -34,7 +34,7 @@
   <body class="index">
     <!-- PRELOADER -->
     <div class="preloader">
-      <img src="/Vanilla_Project/images/loader.gif" alt="preloader" />
+      <img src="images/loader.gif" alt="preloader" />
     </div>
     <!-- START NAVBAR -->
     <head>
