--- a/video.html
+++ b/video.html
@@ -74,7 +74,7 @@
     <!-- START VIDEO -->
     <div class="video-hero">
       <video class="video-container" muted loop autoplay>
-        <source src="/Vanilla_Project/images/video.mp4" type="video/mp4" />
+        <source src="images/video.mp4" type="video/mp4" />
       </video>
       <h1>Video Project</h1>
       <button class="switch-btn">
